# dnb_bass_synth

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  requirements.txt
.github/workflows/: ci.yml  formatting.yml  release.yml
assets/ui/designer/: README.md
bench/: CMakeLists.txt  bench_macro_updates.cpp  bench_oversampling.cpp  bench_smoke.cpp  bench_voice_cpu.cpp
build_clean_alignment_fix/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_clean_alignment_fix/DnBBassSynth_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
build_clean_alignment_fix/bench/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_clean_alignment_fix/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  domain_tests-b12d07c_include.cmake  dsp_tests-b12d07c_include.cmake
build_p4_gate_check/: CTestTestfile.cmake  DartConfiguration.tcl  DnBBassSynth_vst3_helper  Makefile  cmake_install.cmake
build_p4_gate_check/DnBBassSynth_artefacts/JuceLibraryCode/: Defs.txt  JuceHeader.h
build_p4_gate_check/bench/: CTestTestfile.cmake  Makefile  bench_smoke  cmake_install.cmake
build_p4_gate_check/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  domain_tests  domain_tests-b12d07c_include.cmake  domain_tests-b12d07c_tests.cmake  dsp_tests  dsp_tests-b12d07c_include.cmake  dsp_tests-b12d07c_tests.cmake
cmake/: ClangTidy.cmake  CompilerWarnings.cmake  JUCEConfig.cmake  Sanitizers.cmake  Versioning.cmake
config/: clang-tidy.yaml
docs/: implementation_plan.md  master_implementation_plan.md  project_rules.md
docs/adr/: ADR-001-juce-vs-alternatives.md  ADR-002-per-module-oversampling.md  ADR-003-domain-gate-only.md  ADR-004-passive-clap-header.md  ADR-005-P1-Test-Dependency.md  ADR-005-defer-remaining-6-mvp-macros.md  README.md
docs/agent_briefs/: backend_dsp_agent_brief.md  backend_dsp_agent_prompt.md  backend_dsp_alignment_prompt.md  backend_dsp_alignment_tasklist.md  backend_dsp_p1_fix_prompt.md  backend_dsp_p2_fix_prompt.md  backend_dsp_p2_fix_tasklist.md  backend_dsp_p3_fix_prompt.md  backend_dsp_p4_fix_prompt.md  backend_dsp_p4_fix_tasklist.md  backend_dsp_p5_fix_prompt.md  backend_dsp_p5_fix_tasklist.md  backend_dsp_p5_round2_fix_prompt.md  backend_dsp_p5_round2_fix_tasklist.md  backend_dsp_p5_round3_fix_prompt.md  backend_dsp_p5_round3_fix_tasklist.md  backend_dsp_p6_1_fix_prompt.md  backend_dsp_p6_1_fix_tasklist.md  backend_dsp_p6_1_macro10_kickoff_prompt.md  backend_dsp_p6_1_macro10_tasklist.md  backend_dsp_p6_alignment_fix_prompt.md  backend_dsp_p6_alignment_fix_tasklist.md  backend_dsp_p6_kickoff_prompt.md  backend_dsp_p7_fix_prompt.md  backend_dsp_p7_fix_tasklist.md  backend_dsp_p8_kickoff_prompt.md  backend_dsp_p8_kickoff_tasklist.md  backend_dsp_phase_tasklist.md  frontend_ui_agent_brief.md  frontend_ui_agent_prompt.md  frontend_ui_p1_fix_prompt.md  frontend_ui_p2_fix_prompt.md  frontend_ui_p2_fix_tasklist.md  frontend_ui_p4_fix_prompt.md  frontend_ui_p4_fix_tasklist.md  frontend_ui_p5_fix_prompt.md  frontend_ui_p5_fix_tasklist.md  frontend_ui_p5_round2_fix_prompt.md  frontend_ui_p5_round2_fix_tasklist.md  frontend_ui_p5_round3_fix_prompt.md  (+26 more)
docs/changelog/: MVP_0_8_0.md
docs/qa/: alignment_remediation_final_review.md  alignment_remediation_review.md  backend_p1_review.md  current_version_daw_test_checklist.md  frontend_p1_review.md  frontend_p3_ux_feedback.md  frontend_p4_integration_checklist.md  mvp_0_8_0_closure.md  mvp_0_8_0_tester_feedback_form.md  p1_remediation_final_review.md  p2_remediation_final_review.md  p2_review.md  p3_remediation_final_review.md  p3_review.md  p4_remediation_final_review.md  p4_review.md  p5_review.md  p5_round2_review.md  p5_round3_review.md  p6_1_orchestrator_closure_checklist.md  p6_1_review.md  p6_alignment_audit.md  p6_final_gate_review.md  p6_to_p7_gate_deviations.md  p7_final_gate_review.md  p7_fix_review.md  p7_post_gate_daw_hotfix_review.md  p8_gate_review.md  pre_p4_knowledge_alignment_audit.md
docs/qa/alignment_handoffs/: ALIGN_D002_D003_handoff.md  ALIGN_D002_D003_handoff_fix.md
docs/qa/backend_phase_handoffs/: ALIGN_D001_handoff.md  ALIGN_D001_handoff_fix.md  P1_handoff.md  P1_handoff_fix.md  P2_handoff.md  P2_handoff_fix.md  P3_handoff.md  P3_handoff_fix.md  P4_handoff.md  P4_handoff_fix.md  P5_handoff_fix.md  P5_handoff_fix_round2.md  P5_handoff_fix_round3.md  P6_1_handoff.md  P6_1_handoff_fix.md  P6_handoff.md  P6_handoff_fix.md  P7_qa_handoff.md  P7_qa_handoff_fix.md  P8_handoff.md
docs/qa/design_phase_handoffs/: P7_design_handoff.md  P7_design_handoff_fix.md
docs/qa/frontend_phase_handoffs/: P1_handoff.md  (+17 more)
docs/spec/: macro_10_contract_proposal.md  mvp_macro_contract.md  p1_schema_freeze.md  ui_graphic_asset_contract.md
knowledge/: DNB_Bass_VST3_Supplementarna_Specifikacija.docx  DNB_Bass_VST3_TechStack_Arhitektura.docx
src/: Config.h.in
src/app/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/domain/: ConstraintEngine.cpp  ConstraintEngine.h  DnBLimits.h  MacroMap.h  ParameterSpec.h  StyleMode.h
src/engine/: NoteStack.h  SynthEngine.h  Voice.h  VoiceManager.h
src/preset/: PresetManager.cpp  PresetManager.h  PresetMigration.cpp  PresetMigration.h  PresetSchema.h
tests/: CMakeLists.txt
tests/dsp/: test_anti_click.cpp  test_character_osc.cpp  test_crossover_lr4.cpp  test_dc_blocker.cpp  test_denormal_flush.cpp  test_oversampler.cpp  test_sanity_check.cpp  test_saturator.cpp  test_smoother.cpp  test_state_variable_filter.cpp  test_sub_phase_lock.cpp  test_wavefolder.cpp
tests/engine/: test_note_stack.cpp  test_p5_round3.cpp  test_regression.cpp  test_voice_allocator.cpp
tests/render/: render_test_utils.h  test_aliasing.cpp  test_qa_scenarios.cpp
tests/unit/: test_macro_constraints.cpp  test_p5_round2.cpp  test_parameter_ranges.cpp  test_preset_manager.cpp  test_style_modes.cpp
tools/: extract_pdf.py
tools/scripts/: check_frontend_assets.sh  check_frontend_contracts.sh  check_frontend_daw_guards.sh  format.sh  init_submodules.sh  lint.sh
vst3_mac_windows/windows/: README_windows_artifact.txt
(+36 files in other folders)
